git-svn-id: http://svn.vdombox.ru/flextools/trunk@7858 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/LoginView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/LoginView.mxml
@@ -115,7 +115,7 @@
 				<s:Label text="{ resourceManager.getString( 'LoginForm', 'username' ) }" width="100%"
 						 color="white" fontFamily="Arial" fontSize="14" textAlign="left"/>
 				
-				<s:TextInput id="user" text="@{ username }" skinClass="net.vdombox.ide.core.view.skins.TextInputCornerSkin"
+				<s:TextInput id="user" text="@{ username }" skinClass="net.vdombox.ide.common.view.skins.TextInputCornerSkin"
 							 width="100%" height="31"
 							 fontSize="18" fontFamily="Arial" 
 							 keyDown="{keyDownHandler(event)}"/>
@@ -128,7 +128,7 @@
 						 color="white" fontFamily="Arial" fontSize="14" textAlign="left"/>
 				 
 				<s:HGroup width="100%" gap="4">
-					<s:TextInput id="pass" text="@{ password }" skinClass="net.vdombox.ide.core.view.skins.TextInputCornerSkin"
+					<s:TextInput id="pass" text="@{ password }" skinClass="net.vdombox.ide.common.view.skins.TextInputCornerSkin"
 								 width="100%" height="31" displayAsPassword="true" 
 								 fontSize="18" fontFamily="Arial" 
 								 keyDown="{keyDownHandler(event)}"/>
