updater: 1) description 2) for linux
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7864 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildProperties.mxml
@@ -40,7 +40,7 @@
 			
 			private var installerTplXml : XML = 
 				 <application xmlns="http://ns.adobe.com/air/application/2.0">
-				  <version>1.2.3.7836</version> 
+				  <version>1.2.3.7860</version> 
 				 <initialWindow>
 				  <content>Installer.swf</content> 
 				  <systemChrome>none</systemChrome> 
@@ -424,9 +424,7 @@
 			
 			private function get useLinuxSDK () : Boolean
 			{
-				var os : String = Capabilities.os.substr(0, 3).toUpperCase();
-				
-				return os == FileUtils.OS_LINUX;
+				return FileUtils.OS == FileUtils.OS_LINUX;
 			}
 			
 			private function validateAirSDKPath():void
