deleted Unused functions
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7867 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/Player/WebInstaller/src/net/vdombox/powerpack/Player.mxml
+++ b/PowerPack/v.01/Player/WebInstaller/src/net/vdombox/powerpack/Player.mxml
@@ -250,7 +250,7 @@
 
 				tpl = ContextManager.templates.getItemAt ( 0 ) as Template;
 
-				ContextManager.templateStruct = new TemplateStruct ( tpl.xmlStructure, tpl.fullID );
+				ContextManager.templateStruct = new TemplateStruct ( tpl.xmlStructure );
 
 				var validateArr:Array = ContextManager.templateStruct.validate ().array;
 
