--- a/PowerPack/v.01/Player/WebInstaller/src/WebInstaller.mxml
+++ b/PowerPack/v.01/Player/WebInstaller/src/WebInstaller.mxml
@@ -3,34 +3,35 @@
 				creationComplete="application1_creationCompleteHandler(event)" xmlns:powerpack="net.vdombox.powerpack.*"  >
 	<mx:Script>
 		<![CDATA[
-			
-			import mx.events.FlexEvent;
-			
-			private static var POST_ADDRESS : String = "template.xml";
-			
-			protected function application1_creationCompleteHandler(event:FlexEvent):void
-			{
-				var loader : URLLoader = new URLLoader();  
-				var request : URLRequest = new URLRequest(POST_ADDRESS);  
-				
-				// pass the post data  
-				request.method = URLRequestMethod.POST;
-				
-				var variables : URLVariables = new URLVariables();  
-				variables.type = "getXML";  
-				request.data = variables;  
-				
-				// Add Handlers
-				loader.addEventListener(Event.COMPLETE, on_complete);  
-				loader.load(request);  
-				
-			}
-			
-			private function on_complete(evt : Event):void{  
-				// do your stuff here  
+		import mx.events.FlexEvent;
+
+		private static var POST_ADDRESS:String = "template.xml";
+
+		protected function application1_creationCompleteHandler( event:FlexEvent ):void
+		{
+			var loader:URLLoader;
+			loader = new URLLoader ();
+			var request:URLRequest = new URLRequest ( POST_ADDRESS );
+
+			// pass the post data
+			request.method = URLRequestMethod.POST;
+
+			var variables:URLVariables = new URLVariables ();
+			variables.type = "getXML";
+			request.data = variables;
+
+			// Add Handlers
+			loader.addEventListener ( Event.COMPLETE, on_complete );
+			loader.load ( request );
+
+		}
+
+		private function on_complete( evt:Event ):void
+		{
+			// do your stuff here
 //				trace (evt.target.data);
-				player.dataProvider = new XML( evt.target.data);
-			}
+			player.dataProvider = new XML ( evt.target.data );
+		}
 		]]>
 	</mx:Script>
 	<powerpack:Player id="player"/>
