--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
@@ -2,7 +2,7 @@
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
-		 removedFromStage="panel1_removedFromStageHandler(event)">
+		 remove="panel1_removeHandler(event)">
 
 	<fx:Script>
 		<![CDATA[
@@ -100,7 +100,7 @@
 			protected function librariesList_creationCompleteHandler( event : FlexEvent ) : void
 			{
 				BindingUtils.bindSetter( indexChanged, librariesList, "selectedIndex", true );
-				librariesList.addEventListener( ListItemRendererEvent.DOUBLE_CLICK,librariesList_changeHandler, true );
+				librariesList.addEventListener( ListItemRendererEvent.DOUBLE_CLICK,librariesList_changeHandler, true, 0, true );
 			}
 
 			private function indexChanged( value : int ) : void
@@ -111,9 +111,8 @@
 					deleteButton.enabled = true;
 			}
 			
-			protected function panel1_removedFromStageHandler(event:Event):void
+			protected function panel1_removeHandler(event:FlexEvent):void
 			{
-				// TODO Auto-generated method stub
 				librariesList.removeEventListener( ListItemRendererEvent.DOUBLE_CLICK,librariesList_changeHandler, true );
 			}
 			
