mac sdk compiler / some fixes
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7893 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildProperties.mxml
@@ -482,6 +482,11 @@
 				linuxNatineTypeSelector.visible = linuxNatineTypeSelectorVisible;
 			}
 			
+			protected function linuxNativeInstallerTypeSelectorCreationCompleteHandler(event:FlexEvent):void
+			{
+				linuxNatineTypeSelector.visible = linuxNatineTypeSelectorVisible;
+			}
+			
 		]]>
 	</mx:Script>
 	
@@ -576,7 +581,7 @@
 								selected="true"/>
 				
 				<sdkcompiler:LinuxNativeInstallerTypeSelectorVBox id="linuxNatineTypeSelector" 
-																  visible="{linuxNatineTypeSelectorVisible}"
+																  creationComplete="linuxNativeInstallerTypeSelectorCreationCompleteHandler(event)"
 																  paddingLeft="20"/>	
 					
 				<mx:RadioButton id="buildTypePackage"
