--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -869,7 +869,9 @@
 			 -->
 		</mx:HBox>
 		<mx:HRule width="100%" strokeColor="0x1a1a1a" shadowColor="0x4b4c4c" />
-		<mx:HDividedBox y="60" width="100%" height="100%" horizontalGap="1">
+		<mx:HDividedBox y="60" width="100%" height="100%" 
+						horizontalGap="5"
+						dividerThickness="5">
 			<mx:VBox height="100%" minWidth="220" width="220" horizontalScrollPolicy="off">
 				<mx:HBox paddingLeft="3" paddingRight="3" color="#FFFFFF" width="100%">
 					<mx:ComboBox id="cmboxProduct" width="{tree.width}"
