--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -872,7 +872,7 @@
 		<mx:HDividedBox y="60" width="100%" height="100%" 
 						horizontalGap="5"
 						dividerThickness="5">
-			<mx:VBox height="100%" minWidth="220" width="220" horizontalScrollPolicy="off">
+			<mx:VBox height="100%" minWidth="100" width="220" horizontalScrollPolicy="off">
 				<mx:HBox paddingLeft="3" paddingRight="3" color="#FFFFFF" width="100%">
 					<mx:ComboBox id="cmboxProduct" width="{tree.width}"
 								 alternatingItemColors="#999999" borderColor="#333333"
@@ -917,7 +917,7 @@
 							   textRollOverColor="#FFFFFF" />
 				</mx:HBox>
 			</mx:VBox>
-			<mx:TabNavigator width="100%" height="100%" backgroundColor="#E4E4E4" paddingTop="0">
+			<mx:TabNavigator width="100%" minWidth="100" height="100%" backgroundColor="#E4E4E4" paddingTop="0">
 				<mx:Canvas width="100%" height="100%" label="WYSIWYG" show="getCurrentPage()">
 					<mx:VBox width="100%" height="100%" verticalGap="0" verticalAlign="0">
 						<!--mx:HBox width="100%" color="#000000" backgroundColor="#E4E4E4"  >
