bug fix: ProductXMLCreator -> <resource>
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7900 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -709,7 +709,7 @@
 			protected function html_wysiwyg_initializeHandler(event:FlexEvent):void
 			{
 				this.html_wysiwyg.addEventListener(HTML_WYSIWYG.EVENT_WYSIWYG_SAVE_COMBINATION_CLICKED, onWysiwygSaveCombinationClicked);
-				this.html_wysiwyg.addEventListener(ResourceImageUtils.HTTP_IMAGE_LOADED, refreshPageContent);
+				this.html_wysiwyg.addEventListener(ResourceUtils.HTTP_IMAGE_LOADED, refreshPageContent);
 			}
 			
 			private function onTreeKeyboardKeyUp(aKeyboardEvent:KeyboardEvent) : void
