refactor radius from ActionElement and EventElement
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7903 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EditableParameterRenderer.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EditableParameterRenderer.mxml
@@ -64,7 +64,7 @@
 				}
 			}
 			
-			protected function actionText_keyDownHandler(event:KeyboardEvent):void
+			private function keyDownEnterHandler(event:KeyboardEvent):void
 			{
 				if (event.keyCode == Keyboard.ENTER && text != actionText.text )
 				{
@@ -100,7 +100,7 @@
 		<mx:Spacer width="4"/>
 		<s:TextInput id="actionText" minWidth="0" text="@{ data.value }" width="100%"
 					 focusAlpha="0" doubleClick="textinput1_doubleClickHandler(event)" focusOut="actionText_focusOutHandler(event)"
-					 keyDown="actionText_keyDownHandler(event)"/>
+					 keyDown="keyDownEnterHandler(event)"/>
 	</s:HGroup>
 
 	<s:Line xFrom="24" xTo="24" yFrom="0" yTo="20">
