--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
@@ -137,7 +137,7 @@
 					 maxDisplayedLines="1" fontSize="15" fontWeight="bold">
 			</s:Label>
 			
-			<mx:Image id="createServerAction" source="@Embed('assets/green_plus.png')" height="20" width="20" right="10" top="5" 
+			<mx:Image id="createServerAction" source="{VDOMImage.Plus}" height="20" width="20" right="10" top="5" 
 					  click="createServerAction_clickHandler(event)"/>
 				
 			<s:Line top="0" width="100%">
