--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationManagerWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationManagerWindowSkin.mxml
@@ -46,14 +46,17 @@
 	
 	<s:VGroup left="9" top="9" right="9" bottom="9" gap="1">
 
+		<s:Group width="100%">
 			<s:TitleBar id="titleBar" width="100%"					
 						skinClass="net.vdombox.ide.common.view.skins.PopupWindowTitleBarSkin"/>
-
-			<!--s:VGroup right="10" height="100%" verticalAlign="middle" >
+			
+			<!--<s:VGroup right="30" height="100%" verticalAlign="middle" >
 				<s:Button id="closeButton"
-						  skinClass="net.vdombox.view.skins.MainCloseBtnSkin"
-						  click="hostComponent.closeHandler()"/>	
-			</s:VGroup-->
+					skinClass="net.vdombox.ide.common.view.skins.button.MainLogoutBtnSkin"
+					click="hostComponent.dispatchEvent( new ApplicationManagerEvent( ApplicationManagerEvent.LOGOUT ) )"/>	
+			</s:VGroup>-->
+		</s:Group>
+			
 			
 		
 		<s:Group width="100%" height="100%" >
