--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ComboBoxLoginSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ComboBoxLoginSkin.mxml
@@ -23,7 +23,7 @@ is defined by the ComboBoxTextInputSkin class.
 @productversion Flex 4
 -->
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" 
-        xmlns:fb="http://ns.adobe.com/flashbuilder/2009" alpha.disabled=".5" creationComplete="hostComponent.setEditable()"> 
+        xmlns:fb="http://ns.adobe.com/flashbuilder/2009" alpha.disabled=".5" creationComplete="sparkskin1_creationCompleteHandler(event)"> 
     
     <!-- host component -->
     <fx:Metadata>
@@ -37,6 +37,7 @@ is defined by the ComboBoxTextInputSkin class.
     
     <fx:Script fb:purpose="styling">
         <![CDATA[       
+			import mx.events.FlexEvent;
             private var paddingChanged:Boolean;
             private var cornerRadiusChanged:Boolean;
             private var cornerRadius:Number = 0;            
@@ -153,7 +154,13 @@ is defined by the ComboBoxTextInputSkin class.
                 }
                 super.updateDisplayList(unscaledWidth, unscaledHeight);
             }
-        ]]>
+			
+			protected function sparkskin1_creationCompleteHandler(event:FlexEvent):void
+			{
+				hostComponent.setEditable();
+			}
+			
+		]]>
     </fx:Script>
     
     <s:states>
@@ -233,8 +240,7 @@ is defined by the ComboBoxTextInputSkin class.
               skinClass="net.vdombox.ide.core.view.skins.ComboBoxButtonSkin" />  
     <!--- @copy spark.components.ComboBox#textInput -->
     <s:TextInput id="textInput" borderVisible="false"
-                 right="24" left="4" top="0" bottom="0" contentBackgroundAlpha="0"
-                 skinClass="spark.skins.spark.ComboBoxTextInputSkin"/> 
+                 right="24" left="4" top="0" bottom="0" contentBackgroundAlpha="0"/> 
 	
 	<s:Line top="0" left="5" right="5">
 		<s:stroke>
